added photos and html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,23 @@
    <h3>Because that's how I'll decide what to make this page about</h3>
    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores quibusdam molestias doloremque! Animi vero magnam cum ipsa, minus provident voluptate obcaecati nam possimus sed sint, nemo mollitia reiciendis. Quibusdam, ipsa!</p>
    <p>Oh great, an old vacation picture! I'll use this since I took way too many of the same view and used them for absolutley nothing.</p>
+   <br/>
+
    <h2>A sunset view from Tour Montparnasse</h2>
-   
+   <img src="../BasicHTMLTags/IMG_1346_med.jpeg" alt="View of sunset from Tour Montparnasse in black and white" width="640" height="425">
+
+    <h4>Another photo just because I really like the guy walking and the funny face.</h4>
+    <img src="../BasicHTMLTags/IMG_1493_med.jpeg" alt="A man crossing the street" width="480" height="640">
+    <br/>
+    <hr/>
+    <a href="http://aubourguignondumarais.fr/" target="blank">Here is a restaurant I ate at that I thought was really cute.</a>
+    <h4>This is what I ate there:</h4>
+
+<ul>
+<li>Boeuf Bourguignon (delicious, basically fancy beef stew)</li>
+<li>Soupe au pois froude au bacon (cold pea soup, better than it sounds)</li>
+<li>Andouillette (not to be confused with Andouille sausage, basically smelled and tasted like fresh colon and intestine of a pig, zero stars, would not recommend)</li>
+<li>And wine, of course</li>
+</ul>
 </body>
 </html>
